1.8/the-project-step-5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-1-8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project-1-8
  template:
    metadata:
      labels:
        app: the-project-1-8
    spec:
      containers:
        - name: the-project
          image: docker.io/helstest99/dwk-project-step3:20260118032414
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
